# serverless-cargo-plugin

./: .eslintrc.yml  .gitignore  README.md  index.js  index.ts  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/http-lambda/: Cargo.toml  package-lock.json  serverless.yml
examples/http-lambda/src/: main.rs
examples/single-http-lambda/: Cargo.toml  package.json  serverless.yml
examples/workspace-multiple-lambdas/: Cargo.toml  package.json
examples/workspace-multiple-lambdas/hello/: Cargo.toml  package.json  serverless.yml
examples/workspace-multiple-lambdas/hello/src/: hello_cat.rs  hello_cow.rs
examples/workspace-multiple-lambdas/world/: Cargo.toml  package.json  serverless.yml
examples/workspace-multiple-lambdas/world/src/: world.rs
